# CRCA-lite

./: CRCA.py  README.md  __init__.py  pyproject.toml  requirements.txt
branches/: CRCA-Q.py
branches/data_broker/: DataBrokerAgent.py  __init__.py  pipeline.py  routing.py  sources.py
branches/palantir/: __init__.py  attack_path_analyzer.py  causal_modeler.py  device_discovery.py  network_mapper.py  palantir_agent.py  shodan_client.py  visualizer.py
examples/: VISION.md
templates/: DRAG_DROP_GUIDE.md  TEMPLATE_GUIDE.md
tests/: sanity.yml  sanity_check
utils/: agent.py  aop.py
